--- a/templates/registro.html
+++ b/templates/registro.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static' , filename="registro.css")}}" />
 </head>
 <body>
+  {% for mesg in get_flashed_messages() %}
+    <h1>{{ mesg }}</h1>
+  {% endfor %}
 <div class="container">  
   <form id="contact" action="/añadir" method="post">
     <h2>REGISTRO DE TRABAJADORES</h2>
@@ -22,10 +25,17 @@
     </fieldset>
     <fieldset>
   </form>
+  <form action="/extraer" method="GET">
+   <fieldset>
+     <button type="submit"class="btn btn-primary btn-block">Extraer</button>
+    </fieldset>
+  </form>
   <form action="/logout" method="GET">
+   <fieldset>
      <button type="submit"class="btn btn-primary btn-block">Logout</button>
     </fieldset>
   </form>
+
 </div>
 </body>
 <html>
